...
        );
        showSnackBar(
            message: failure.error, context: context, color: Colors.red);
      },
      (success) {
        state = state.copyWith(isLoading: false, error: null);
        showSnackBar(message: "Successfully registered", context: context);
      },
    );
  }

  Future<void> loginStudent(
    BuildContext context, // yo kaile pani na lekhne
...
