...
  }

  Future<void> addDummyCourse() async {
    // check of course box is empty
    var box = await Hive.openBox<CourseHiveModel>(HiveTableConstant.courseBox);
    if (box.isEmpty) {
      final course1 = CourseHiveModel(courseName: 'Flutter');
      final course2 = CourseHiveModel(courseName: 'Dart');
      final course3 = CourseHiveModel(courseName: 'Java');
      final course4 = CourseHiveModel(courseName: 'Kotlin');

      List<CourseHiveModel> courses = [course1, course2, course3, course4];

...
